syntax = "proto3";
package HeartbeatProto;

message HeartbeatMessage {
    string MsgType = 1;
    string DeviceId = 2;
    string ModuleId = 3;
    int64 Id = 4;
    int64 HeartbeatCreatedTicksUtc = 5;
}